--- a/app/src/main/res/drawable/ic_launcher_foreground.xml
+++ b/app/src/main/res/drawable/ic_launcher_foreground.xml
@@ -1,30 +1,15 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:aapt="http://schemas.android.com/aapt"
     android:width="108dp"
     android:height="108dp"
-    android:viewportWidth="108"
-    android:viewportHeight="108">
-    <path android:pathData="M31,63.928c0,0 6.4,-11 12.1,-13.1c7.2,-2.6 26,-1.4 26,-1.4l38.1,38.1L107,108.928l-32,-1L31,63.928z">
-        <aapt:attr name="android:fillColor">
-            <gradient
-                android:endX="85.84757"
-                android:endY="92.4963"
-                android:startX="42.9492"
-                android:startY="49.59793"
-                android:type="linear">
-                <item
-                    android:color="#44000000"
-                    android:offset="0.0" />
-                <item
-                    android:color="#00000000"
-                    android:offset="1.0" />
-            </gradient>
-        </aapt:attr>
-    </path>
+    android:viewportWidth="24"
+    android:viewportHeight="24">
+  <group android:scaleX="0.5714634"
+      android:scaleY="0.5714634"
+      android:translateX="5.142439"
+      android:translateY="5.142439">
     <path
-        android:fillColor="#FFFFFF"
-        android:fillType="nonZero"
-        android:pathData="M65.3,45.828l3.8,-6.6c0.2,-0.4 0.1,-0.9 -0.3,-1.1c-0.4,-0.2 -0.9,-0.1 -1.1,0.3l-3.9,6.7c-6.3,-2.8 -13.4,-2.8 -19.7,0l-3.9,-6.7c-0.2,-0.4 -0.7,-0.5 -1.1,-0.3C38.8,38.328 38.7,38.828 38.9,39.228l3.8,6.6C36.2,49.428 31.7,56.028 31,63.928h46C76.3,56.028 71.8,49.428 65.3,45.828zM43.4,57.328c-0.8,0 -1.5,-0.5 -1.8,-1.2c-0.3,-0.7 -0.1,-1.5 0.4,-2.1c0.5,-0.5 1.4,-0.7 2.1,-0.4c0.7,0.3 1.2,1 1.2,1.8C45.3,56.528 44.5,57.328 43.4,57.328L43.4,57.328zM64.6,57.328c-0.8,0 -1.5,-0.5 -1.8,-1.2s-0.1,-1.5 0.4,-2.1c0.5,-0.5 1.4,-0.7 2.1,-0.4c0.7,0.3 1.2,1 1.2,1.8C66.5,56.528 65.6,57.328 64.6,57.328L64.6,57.328z"
-        android:strokeWidth="1"
-        android:strokeColor="#00000000" />
+        android:pathData="M8.384,3C8.758,3 9.062,3.312 9.062,3.696V3.922C9.106,3.91 9.15,3.899 9.195,3.888C11.04,3.444 12.96,3.444 14.805,3.888C14.85,3.899 14.894,3.91 14.938,3.922V3.696C14.938,3.312 15.242,3 15.616,3C15.991,3 16.295,3.312 16.295,3.696V4.429C18.228,5.387 19.673,7.199 20.175,9.399C20.608,11.292 20.608,13.263 20.175,15.156C19.55,17.89 17.47,20.025 14.805,20.667C12.96,21.111 11.04,21.111 9.195,20.667C6.53,20.025 4.45,17.891 3.825,15.156C3.392,13.263 3.392,11.292 3.825,9.399C4.327,7.199 5.772,5.387 7.706,4.429V3.696C7.706,3.312 8.009,3 8.384,3ZM11.027,9.888C11.239,9.671 11.239,9.318 11.027,9.101C10.816,8.883 10.472,8.883 10.26,9.101L8.836,10.563L8.315,10.028C8.103,9.811 7.76,9.811 7.548,10.028C7.336,10.246 7.336,10.598 7.548,10.816L8.452,11.743C8.664,11.961 9.007,11.961 9.219,11.743L11.027,9.888ZM12.904,10.329C12.604,10.329 12.362,10.578 12.362,10.886C12.362,11.193 12.604,11.443 12.904,11.443H16.069C16.368,11.443 16.611,11.193 16.611,10.886C16.611,10.578 16.368,10.329 16.069,10.329H12.904ZM11.027,14.527C11.239,14.309 11.239,13.957 11.027,13.74C10.816,13.522 10.472,13.522 10.26,13.74L8.836,15.201L8.315,14.667C8.103,14.45 7.76,14.45 7.548,14.667C7.336,14.885 7.336,15.237 7.548,15.455L8.452,16.382C8.664,16.6 9.007,16.6 9.219,16.382L11.027,14.527ZM12.904,14.968C12.604,14.968 12.362,15.217 12.362,15.525C12.362,15.832 12.604,16.081 12.904,16.081H16.069C16.368,16.081 16.611,15.832 16.611,15.525C16.611,15.217 16.368,14.968 16.069,14.968H12.904Z"
+        android:fillColor="#ffffff"
+        android:fillType="evenOdd"/>
+  </group>
 </vector>
