Added toolbar layout and theme

--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -6,4 +6,11 @@
     </style>
 
     <style name="Theme.CheckMate" parent="Base.Theme.CheckMate" />
+
+    <!-- Toolbar -->
+    <style name="ToolbarAppearance">
+        <item name="fontFamily">sans-serif-black</item>
+        <item name="android:textSize">29sp</item>
+        <item name="android:textColor">@color/black</item>
+    </style>
 </resources>
