--- a/app/src/main/res/layout/activity_create_task.xml
+++ b/app/src/main/res/layout/activity_create_task.xml
@@ -7,4 +7,13 @@
     android:layout_height="match_parent"
     tools:context=".activities.CreateTaskActivity">
 
+    <com.google.android.material.appbar.MaterialToolbar
+        android:id="@+id/tb_create_task"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:title="New Task"
+        app:titleTextAppearance="@style/ToolbarText"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
