--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -10,7 +10,7 @@
     <com.google.android.material.appbar.MaterialToolbar
         android:id="@+id/tb_main"
         app:title="CheckMate"
-        app:titleTextAppearance="@style/Toolbar"
+        app:titleTextAppearance="@style/ToolbarText"
         app:titleMarginStart="30dp"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
