--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -9,7 +9,7 @@
 
     <!-- Toolbar -->
     <style name="ToolbarText">
-        <item name="fontFamily">sans-serif-black</item>
+        <item name="fontFamily">sans-serif</item>
         <item name="android:textSize">29sp</item>
         <item name="android:textColor">@color/black</item>
     </style>
