--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -5,12 +5,13 @@
         <!-- Custom Theme For Icons -->
         <item name="colorPrimary">@color/onyx</item>
     </style>
+
     <style name="Theme.CheckMate" parent="Base.Theme.CheckMate" />
 
     <!-- Toolbar -->
     <style name="ToolbarText">
         <item name="fontFamily">sans-serif</item>
-        <item name="android:textSize">29sp</item>
+        <item name="android:textSize">23sp</item>
         <item name="android:textColor">@color/black</item>
     </style>
 
@@ -19,5 +20,14 @@
         <item name="android:src">@drawable/baseline_add_24</item>
         <item name="backgroundTint">@color/rose_taupe</item>
         <item name="tint">@color/mint_cream</item>
+    </style>
+
+    <!-- Buttons -->
+    <style name="Buttons">
+        <item name="backgroundTint">@color/onyx</item>
+        <item name="android:textSize">18sp</item>
+        <item name="android:padding">15dp</item>
+        <item name="cornerRadius">10dp</item>
+        <item name="android:textColor">@color/mint_cream</item>
     </style>
 </resources>
