--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -10,6 +10,7 @@
     <com.google.android.material.appbar.MaterialToolbar
         android:id="@+id/tb_main"
         app:title="CheckMate"
+        android:paddingEnd="10dp"
         app:titleTextAppearance="@style/ToolbarText"
         app:titleMarginStart="30dp"
         app:layout_constraintTop_toTopOf="parent"
