--- a/app/src/main/res/menu/main_options.xml
+++ b/app/src/main/res/menu/main_options.xml
@@ -5,5 +5,5 @@
 
     <item
         android:id="@+id/options_settings"
-        android:title="Settings" ></item>
+        android:title="Settings" />
 </menu>
