--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -30,4 +30,11 @@
         <item name="cornerRadius">10dp</item>
         <item name="android:textColor">@color/mint_cream</item>
     </style>
+
+    <!-- Text Input Layout -->
+    <style name="TextInputLayout">
+        <item name="android:layout_marginStart">15dp</item>
+        <item name="android:layout_marginEnd">15dp</item>
+        <item name="android:layout_marginBottom">5dp</item>
+    </style>
 </resources>
