--- a/app/src/main/res/layout/activity_create_task.xml
+++ b/app/src/main/res/layout/activity_create_task.xml
@@ -5,7 +5,7 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".activities.CreateTaskActivity">
+    tools:context=".ui.activity.CreateTaskActivity">
 
     <com.google.android.material.appbar.MaterialToolbar
         android:id="@+id/tb_create_task"
