--- a/app/src/main/res/layout/item_task.xml
+++ b/app/src/main/res/layout/item_task.xml
@@ -53,7 +53,7 @@
             android:justificationMode="inter_word"
             android:maxLines="3"
             android:textSize="16dp"
-            android:fontFamily="sans-serif-condensed"
+            android:fontFamily="sans-serif-medium"
             android:textColor="@color/black"
             android:layout_marginTop="8dp"
             android:layout_marginEnd="15dp"
