--- a/app/src/main/res/layout/item_task.xml
+++ b/app/src/main/res/layout/item_task.xml
@@ -5,7 +5,7 @@
     android:id="@+id/item_task"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:backgroundTint="@color/timber_wolf">
+    style="@style/TaskItemCard">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:paddingTop="15dp"
@@ -28,7 +28,6 @@
             android:text="Lorem Ipsum"
             android:fontFamily="sans-serif-black"
             android:textSize="28sp"
-            android:textColor="@color/onyx"
             android:layout_marginStart="50dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"/>
@@ -36,12 +35,12 @@
         <com.google.android.material.divider.MaterialDivider
             android:id="@+id/item_task_divider"
             app:layout_constraintTop_toBottomOf="@id/item_task_name"
+            style="@style/TaskItemDivider"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             app:layout_constraintStart_toStartOf="@id/item_task_name"
             android:layout_marginTop="13dp"
             android:layout_marginStart="50dp"
-            app:dividerColor="@color/onyx"
             android:layout_marginEnd="15dp"
             app:dividerThickness="3dp"/>
 
@@ -54,7 +53,7 @@
             android:maxLines="3"
             android:textSize="16dp"
             android:fontFamily="sans-serif-medium"
-            android:textColor="@color/black"
+            style="@style/TaskItemNotes"
             android:layout_marginTop="8dp"
             android:layout_marginEnd="15dp"
             android:layout_marginStart="50dp"
