--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -44,11 +44,23 @@
     </style>
     <style name="TaskItemName">
         <item name="android:textColor">@color/onyx</item>
+        <item name="android:textSize">28sp</item>
+        <item name="android:fontFamily">sans-serif-black</item>
+        <item name="android:layout_marginStart">50dp</item>
     </style>
     <style name="TaskItemDivider">
         <item name="dividerColor">@color/onyx</item>
+        <item name="android:layout_marginTop">13dp</item>
+        <item name="android:layout_marginStart">50dp</item>
+        <item name="android:layout_marginEnd">15dp</item>
     </style>
     <style name="TaskItemNotes">
         <item name="android:textColor">@color/onyx</item>
+        <item name="android:maxLines">3</item>
+        <item name="android:textSize">16sp</item>
+        <item name="android:fontFamily">sans-serif-medium</item>
+        <item name="android:layout_marginTop">8dp</item>
+        <item name="android:layout_marginEnd">15dp</item>
+        <item name="android:layout_marginStart">50dp</item>
     </style>
 </resources>
