--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -42,7 +42,7 @@
     </style>
     <style name="TaskItemName">
         <item name="android:textColor">@color/mint_cream</item>
-        <item name="android:textSize">28sp</item>
+        <item name="android:textSize">20sp</item>
         <item name="android:fontFamily">sans-serif-black</item>
         <item name="android:layout_marginStart">50dp</item>
     </style>
@@ -51,11 +51,12 @@
         <item name="android:layout_marginTop">13dp</item>
         <item name="android:layout_marginStart">50dp</item>
         <item name="android:layout_marginEnd">15dp</item>
+        <item name="dividerThickness">2dp</item>
     </style>
     <style name="TaskItemNotes">
         <item name="android:textColor">@color/mint_cream</item>
         <item name="android:maxLines">3</item>
-        <item name="android:textSize">16sp</item>
+        <item name="android:textSize">14sp</item>
         <item name="android:fontFamily">sans-serif-medium</item>
         <item name="android:layout_marginTop">8dp</item>
         <item name="android:layout_marginEnd">15dp</item>
