--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -19,6 +19,35 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"/>
 
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/iv_empty_container"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="70dp">
+
+        <ImageView
+            android:id="@+id/iv_empty_photo"
+            android:src="@drawable/illustration_empty"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            style="@style/IllustrationEmptyPhoto"/>
+
+        <TextView
+            app:layout_constraintTop_toBottomOf="@id/iv_empty_photo"
+            app:layout_constraintStart_toStartOf="@id/iv_empty_photo"
+            app:layout_constraintEnd_toEndOf="@id/iv_empty_photo"
+            style="@style/IllustrationEmptyText"
+            android:text="@string/empty_task"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"/>
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rv_main"
         android:layout_marginTop="?attr/actionBarSize"
