--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -64,4 +64,14 @@
         <item name="android:layout_marginEnd">15dp</item>
         <item name="android:layout_marginStart">50dp</item>
     </style>
+
+    <!-- Illustration Empty -->
+    <style name="IllustrationEmptyPhoto">
+        <item name="android:layout_height">250dp</item>
+        <item name="android:layout_width">250dp</item>
+    </style>
+    <style name="IllustrationEmptyText">
+        <item name="android:alpha">0.6</item>
+        <item name="android:fontFamily">sans-serif-black</item>
+    </style>
 </resources>
