--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -28,6 +28,13 @@
         <item name="cornerRadius">12dp</item>
         <item name="android:textColor">@color/mint_cream</item>
     </style>
+    <style name="DeleteButton">
+        <item name="backgroundTint">@color/red_dark</item>
+        <item name="android:textSize">20sp</item>
+        <item name="android:padding">15dp</item>
+        <item name="cornerRadius">10dp</item>
+        <item name="android:textColor">@color/mint_cream</item>
+    </style>
 
     <!-- Text Input Layout -->
     <style name="TextInputLayout">
