--- a/app/src/main/res/xml/preferences.xml
+++ b/app/src/main/res/xml/preferences.xml
@@ -25,7 +25,7 @@
 
             <intent
                 android:action="android.intent.action.VIEW"
-                android:data="https://github.com/eipna"/>
+                android:data="@string/website_github"/>
         </Preference>
 
         <Preference
