--- a/app/src/main/res/layout/item_task.xml
+++ b/app/src/main/res/layout/item_task.xml
@@ -28,7 +28,7 @@
             app:layout_constraintStart_toStartOf="parent"
             android:text="Lorem Ipsum"
             style="@style/TaskItemName"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"/>
 
         <com.google.android.material.divider.MaterialDivider
