--- a/app/src/main/res/menu/main_options.xml
+++ b/app/src/main/res/menu/main_options.xml
@@ -1,7 +1,25 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu
     xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools">
+
+    <item
+        android:id="@+id/item_sort"
+        android:title="Sort by"
+        android:icon="@drawable/baseline_sort_24"
+        app:showAsAction="ifRoom|collapseActionView">
+
+        <menu>
+            <item
+                android:id="@+id/item_sort_AZ"
+                android:title="Name (A to Z)"/>
+
+            <item
+                android:id="@+id/item_sort_ZA"
+                android:title="Name (Z to A)"/>
+        </menu>
+    </item>
 
     <item
         android:id="@+id/options_settings"
