--- a/app/src/main/res/menu/main_options.xml
+++ b/app/src/main/res/menu/main_options.xml
@@ -7,7 +7,7 @@
     <item
         android:id="@+id/item_sort"
         android:title="Sort by"
-        android:icon="@drawable/baseline_sort_24"
+        android:icon="@drawable/sort"
         app:showAsAction="ifRoom|collapseActionView">
 
         <menu>
