Modified showAsAction attribute for sort menu item

--- a/app/src/main/res/menu/main_options.xml
+++ b/app/src/main/res/menu/main_options.xml
@@ -8,7 +8,7 @@
         android:id="@+id/item_sort"
         android:title="Sort by"
         android:icon="@drawable/sort"
-        app:showAsAction="ifRoom|collapseActionView">
+        app:showAsAction="ifRoom">
 
         <menu>
             <group
