Migrate and use strings in strings.xml instead

--- a/app/src/main/res/layout/activity_create_task.xml
+++ b/app/src/main/res/layout/activity_create_task.xml
@@ -9,7 +9,7 @@
 
     <com.google.android.material.appbar.MaterialToolbar
         android:id="@+id/tb_create_task"
-        app:title="New Task"
+        app:title="@string/toolbar_create"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -24,7 +24,7 @@
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_height="wrap_content">
 
             <com.google.android.material.textfield.TextInputLayout
                 android:id="@+id/til_task_name"
@@ -34,7 +34,7 @@
                 app:layout_constraintStart_toStartOf="parent"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:hint="Name">
+                android:hint="@string/input_task_name">
 
                 <com.google.android.material.textfield.TextInputEditText
                     android:id="@+id/tiet_task_name"
@@ -50,7 +50,7 @@
                 app:layout_constraintStart_toStartOf="parent"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:hint="Notes">
+                android:hint="@string/input_task_notes">
 
                 <com.google.android.material.textfield.TextInputEditText
                     android:id="@+id/tiet_task_notes"
@@ -66,7 +66,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         android:layout_marginBottom="10dp"
-        android:text="Create task"
+        android:text="@string/button_create_task"
         style="@style/Buttons"
         android:layout_width="match_parent"
         android:layout_marginHorizontal="20dp"
