--- a/app/src/main/res/layout/activity_edit_task.xml
+++ b/app/src/main/res/layout/activity_edit_task.xml
@@ -12,7 +12,7 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:title="Edit Task"
+        app:title="@string/toolbar_edit"
         app:titleTextAppearance="@style/ToolbarText"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"/>
@@ -24,7 +24,7 @@
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_height="wrap_content">
 
             <com.google.android.material.textfield.TextInputLayout
                 android:id="@+id/til_edit_task_name"
@@ -34,7 +34,7 @@
                 app:layout_constraintStart_toStartOf="parent"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:hint="Name">
+                android:hint="@string/input_task_name">
 
                 <com.google.android.material.textfield.TextInputEditText
                     android:id="@+id/tiet_edit_task_name"
@@ -50,7 +50,7 @@
                 app:layout_constraintStart_toStartOf="parent"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:hint="Notes">
+                android:hint="@string/input_task_notes">
 
                 <com.google.android.material.textfield.TextInputEditText
                     android:id="@+id/tiet_edit_task_notes"
@@ -66,7 +66,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         android:layout_marginBottom="2dp"
-        android:text="Save"
+        android:text="@string/button_save"
         style="@style/Buttons"
         android:layout_width="match_parent"
         android:layout_marginHorizontal="20dp"
@@ -78,7 +78,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         android:layout_marginBottom="10dp"
-        android:text="Delete"
+        android:text="@string/button_delete"
         style="@style/DeleteButton"
         android:layout_width="match_parent"
         android:layout_marginHorizontal="20dp"
