--- a/app/src/main/res/menu/completed_task_options.xml
+++ b/app/src/main/res/menu/completed_task_options.xml
@@ -4,7 +4,7 @@
 
     <item
         android:id="@+id/item_clear_completed_task"
-        android:title="Clear all"
+        android:title="@string/menu_clear_all"
         android:icon="@drawable/baseline_delete_24"
         app:showAsAction="ifRoom"/>
 
