--- a/app/src/main/res/menu/main_options.xml
+++ b/app/src/main/res/menu/main_options.xml
@@ -6,7 +6,7 @@
 
     <item
         android:id="@+id/item_sort"
-        android:title="Sort by"
+        android:title="@string/menu_sort"
         android:icon="@drawable/sort"
         app:showAsAction="ifRoom">
 
@@ -15,18 +15,18 @@
                 android:checkableBehavior="single">
                 <item
                     android:id="@+id/item_sort_AZ"
-                    android:title="Name (A to Z)"/>
+                    android:title="@string/menu_sortAZ"/>
 
                 <item
                     android:id="@+id/item_sort_ZA"
-                    android:title="Name (Z to A)"/>
+                    android:title="@string/menu_sortZA"/>
             </group>
         </menu>
     </item>
 
     <item
         android:id="@+id/item_completed_tasks"
-        android:title="Completed Tasks"
+        android:title="@string/menu_completed_tasks"
         android:icon="@drawable/completed_tasks"
         app:showAsAction="ifRoom"/>
 
