--- a/app/src/main/res/layout/activity_create_task.xml
+++ b/app/src/main/res/layout/activity_create_task.xml
@@ -43,9 +43,27 @@
             </com.google.android.material.textfield.TextInputLayout>
 
             <com.google.android.material.textfield.TextInputLayout
-                android:id="@+id/til_task_notes"
+                android:id="@+id/til_task_date_created"
                 style="@style/TextInputLayout"
                 app:layout_constraintTop_toBottomOf="@id/til_task_name"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:hint="@string/input_date_created">
+
+                <com.google.android.material.textfield.TextInputEditText
+                    android:id="@+id/tiet_task_date_created"
+                    android:focusable="false"
+                    android:inputType="none"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"/>
+            </com.google.android.material.textfield.TextInputLayout>
+
+            <com.google.android.material.textfield.TextInputLayout
+                android:id="@+id/til_task_notes"
+                style="@style/TextInputLayout"
+                app:layout_constraintTop_toBottomOf="@id/til_task_date_created"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 android:layout_width="match_parent"
