--- a/app/src/main/res/layout/activity_edit_task.xml
+++ b/app/src/main/res/layout/activity_edit_task.xml
@@ -55,6 +55,7 @@
                 <com.google.android.material.textfield.TextInputEditText
                     android:id="@+id/tiet_edit_task_date_created"
                     android:inputType="none"
+                    android:focusable="false"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"/>
             </com.google.android.material.textfield.TextInputLayout>
