--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -50,11 +50,23 @@
     <style name="TaskItemCard">
         <item name="android:backgroundTint">@color/timber_wolf</item>
     </style>
+    <style name="TaskItemDateCreatedImage">
+        <item name="tint">@color/onyx</item>
+        <item name="android:layout_height">20dp</item>
+        <item name="android:layout_width">20dp</item>
+        <item name="android:layout_marginStart">48dp</item>
+    </style>
+    <style name="TaskItemDateCreatedText">
+        <item name="android:textColor">@color/onyx</item>
+        <item name="fontFamily">sans-serif-medium</item>
+        <item name="android:layout_marginStart">5dp</item>
+    </style>
     <style name="TaskItemName">
         <item name="android:textColor">@color/onyx</item>
         <item name="android:textSize">20sp</item>
         <item name="android:fontFamily">sans-serif-black</item>
         <item name="android:layout_marginStart">50dp</item>
+        <item name="android:layout_marginTop">40dp</item>
     </style>
     <style name="TaskItemDivider">
         <item name="dividerColor">@color/onyx</item>
