--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -48,6 +48,17 @@
     <style name="TaskItemCard">
         <item name="android:backgroundTint">@color/onyx</item>
     </style>
+    <style name="TaskItemDateCreatedImage">
+        <item name="tint">@color/mint_cream</item>
+        <item name="android:layout_height">20dp</item>
+        <item name="android:layout_width">20dp</item>
+        <item name="android:layout_marginStart">48dp</item>
+    </style>
+    <style name="TaskItemDateCreatedText">
+        <item name="android:textColor">@color/mint_cream</item>
+        <item name="fontFamily">sans-serif-medium</item>
+        <item name="android:layout_marginStart">5dp</item>
+    </style>
     <style name="TaskItemName">
         <item name="android:textColor">@color/mint_cream</item>
         <item name="android:textSize">20sp</item>
