--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -52,13 +52,14 @@
     </style>
     <style name="TaskItemDateCreatedImage">
         <item name="tint">@color/onyx</item>
-        <item name="android:layout_height">20dp</item>
-        <item name="android:layout_width">20dp</item>
+        <item name="android:layout_height">18dp</item>
+        <item name="android:layout_width">18dp</item>
         <item name="android:layout_marginStart">48dp</item>
     </style>
     <style name="TaskItemDateCreatedText">
         <item name="android:textColor">@color/onyx</item>
         <item name="fontFamily">sans-serif-medium</item>
+        <item name="android:textSize">10sp</item>
         <item name="android:layout_marginStart">5dp</item>
     </style>
     <style name="TaskItemName">
@@ -66,7 +67,7 @@
         <item name="android:textSize">20sp</item>
         <item name="android:fontFamily">sans-serif-black</item>
         <item name="android:layout_marginStart">50dp</item>
-        <item name="android:layout_marginTop">40dp</item>
+        <item name="android:layout_marginTop">30dp</item>
     </style>
     <style name="TaskItemDivider">
         <item name="dividerColor">@color/onyx</item>
