--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -83,6 +83,13 @@
         <item name="android:layout_marginEnd">15dp</item>
         <item name="android:layout_marginStart">50dp</item>
     </style>
+    <style name="TaskItemLastEdited">
+        <item name="fontFamily">sans-serif-medium</item>
+        <item name="android:textSize">12sp</item>
+        <item name="android:textStyle">bold</item>
+        <item name="android:layout_marginTop">10dp</item>
+        <item name="android:layout_marginEnd">15dp</item>
+    </style>
 
     <!-- Illustration Empty -->
     <style name="IllustrationEmptyPhoto">
